<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
    <TextView
        android:id="@+id/lbl_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_detail_product_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingRight="6dp"/>
    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_product_name"
        android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/lbl_unit_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_detail_unit_price"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_product_name"
        android:paddingRight="6dp"/>
    <TextView
        android:id="@+id/unit_price"
        android:hint="@string/ui_detail_hint_unit_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_unit_price"
        android:layout_below="@id/product_name"/>

    <TextView
        android:id="@+id/lbl_qty_per_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_detail_qty_per_unit"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_unit_price"
        android:paddingRight="6dp"/>
    <TextView
        android:id="@+id/qty_per_unit"
        android:hint="@string/ui_detail_hint_qty_per_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_qty_per_unit"
        android:layout_below="@id/lbl_unit_price"/>

    <TextView
        android:id="@+id/lbl_units_in_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_detail_units_in_stock"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_qty_per_unit"
        android:paddingRight="6dp"/>
    <TextView
        android:id="@+id/units_in_stock"
        android:hint="@string/ui_detail_hint_units_in_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_units_in_stock"
        android:layout_below="@id/lbl_qty_per_unit"/>

    <TextView
        android:id="@+id/lbl_units_on_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_detail_units_on_order"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_units_in_stock"
        android:paddingRight="6dp"/>
    <TextView
        android:id="@+id/units_on_order"
        android:hint="@string/ui_detail_hint_units_on_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_units_on_order"
        android:layout_below="@id/lbl_units_in_stock"/>

    <TextView
        android:id="@+id/lbl_reorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_detail_reorder_level"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_units_on_order"
        android:paddingRight="6dp"/>
    <TextView
        android:id="@+id/reorder"
        android:hint="@string/ui_detail_hint_reorder_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_reorder"
        android:layout_below="@id/lbl_units_on_order"/>

    <TextView
        android:id="@+id/lbl_product_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_detail_product_id"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_reorder"
        android:paddingRight="6dp"/>
    <TextView
        android:id="@+id/product_id"
        android:hint="@string/ui_detail_hint_product_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_product_id"
        android:layout_below="@id/lbl_reorder"/>

    <TextView
        android:id="@+id/lbl_supplier_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_detail_supplier_id"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_product_id"
        android:paddingRight="6dp"/>
    <TextView
        android:id="@+id/supplier_id"
        android:hint="@string/ui_detail_hint_supplier_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_supplier_id"
        android:layout_below="@id/lbl_product_id"/>

    <TextView
        android:id="@+id/lbl_category_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_detail_category_id"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_supplier_id"
        android:paddingRight="6dp"/>
    <TextView
        android:id="@+id/category_id"
        android:hint="@string/ui_detail_hint_category_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_category_id"
        android:layout_below="@id/lbl_supplier_id"/>

    <TextView
        android:id="@+id/lbl_discontinued"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_detail_discontinued"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_category_id"
        android:paddingRight="6dp"/>
    <TextView
        android:id="@+id/discontinued"
        android:hint="@string/ui_detail_hint_discontinued"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_discontinued"
        android:layout_below="@id/lbl_category_id"/>
</RelativeLayout>
